Fix z-indexes on sync and feedback

--- a/www/css/base-v42.css
+++ b/www/css/base-v42.css
@@ -291,7 +291,7 @@ article .hat {
 	position: absolute;
 	right: 0.2em;
 	top: 0.2em;
-	z-index: 101;
+	z-index: 102;
 }
 #options, #sync {
 	clear: right;
@@ -299,6 +299,7 @@ article .hat {
 	display: block;
 	float: right;
 	margin-bottom: 2px;
+	z-index: 102;
 }
 #options-panel {
 	position: absolute;
